codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compaction_progress_status.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Compacting Preparing compaction (0s • esc to interrupt)                       "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Codex to do anything                                                    │"
"╰────────────────────────────────────────────────────────────────────────────0s╯"
"  gpt-5.6-sol default · /tmp/project                                            "
