codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pending_status_line_command_fallback_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-test · Context 0% used                                                    "
